# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import("//foundation/CastEngine/castengine_cast_framework/cast_engine.gni")

config("cast_session_config") {
    include_dirs = [
        "${cast_engine_interfaces}/inner_api",
        "${cast_engine_interfaces}/inner_api/include",
        "//base/security/access_token/interfaces/innerkits/nativetoken/include",
        "//base/security/access_token/interfaces/innerkits/accesstoken/include",
        "//base/security/access_token/interfaces/innerkits/token_setproc/include",
    ]
}
ohos_unittest("cast_session_manager_test") {
    module_out_path = "/cast_engine/cast_engine/common"

    testonly = true

    sources = [
        "unittest/phone/cast_session_manager_test.cpp",
    ]

    configs = [
        ":cast_session_config"
    ]

    cflags_cc = [
        "--coverage"
    ]

    ldflags = [
        "--coverage",
    ]

    deps = [
        "${cast_engine_common}:cast_engine_common_sources",
        "${cast_engine_interfaces}/inner_api:cast_engine_client"
    ]

    external_deps = [
        "access_token:libnativetoken",
        "access_token:libtoken_setproc",
        "access_token:libaccesstoken_sdk",
        "c_utils:utils",
        "googletest:gtest",
        "hilog:libhilog",
        "ipc:ipc_core"
    ]

    subsystem_name = "castplus"
    part_name = "cast_engine"
}

ohos_unittest("cast_session_test") {
    module_out_path = "cast_engine/cast_engine/common"

    testonly = true

    sources = [
        "unittest/phone/cast_session_test.cpp"
    ]

    configs = [
        ":cast_session_config"
    ]

    cflags_cc = [
        "--coverage"
    ]

    ldflags = [
        "--coverage",
    ]

    include_dirs = [
        "${cast_engine_client}/include",
        "${cast_engine_service}/src/device_manager/include"
    ]

    deps = [
        "${cast_engine_service}/src/device_manager:cast_discovery",
        "${cast_engine_common}:cast_engine_common_sources",
        "${cast_engine_interfaces}/inner_api:cast_engine_client"
    ]

    external_deps = [
        "access_token:libnativetoken",
        "access_token:libtoken_setproc",
        "access_token:libaccesstoken_sdk",
        "c_utils:utils",
        "device_manager:devicemanagersdk",
        "googletest:gtest",
        "graphic_2d:surface",
        "hilog:libhilog",
        "ipc:ipc_core",
    ]

    subsystem_name = "castplus"
    part_name = "cast_engine"
}

group("cast_unittest") {
  testonly = true
  deps = [
      ":cast_session_manager_test",
      ":cast_session_test",
      "unittest/phone/stream:stream_unittest",
  ]
}