# Copyright (c) Huawei Technologies Co., Ltd. 2022-2023. All rights reserved.

import("//foundation/CastEngine/castengine_cast_framework/cast_engine.gni")

config("cast_session_channel_config") {
  include_dirs = [ "include", "src/softbus" ]
}

ohos_static_library("cast_session_channel") {
  sources = [
    "src/channel_manager.cpp",
    "src/softbus/softbus_connection.cpp",
    "src/softbus/softbus_wrapper.cpp",
    "src/tcp/tcp_connection.cpp",
    "src/tcp/tcp_socket.cpp",
  ]

  include_dirs = [
    "src/softbus",
    "src/tcp",
    "${cast_engine_service}/src/session/src/utils/include",
    "//foundation/communication/dsoftbus/sdk/transmission/trans_channel/udp/file/include",
    "//foundation/communication/dsoftbus/interfaces/inner_kits/transport/",
    "//foundation/communication/dsoftbus/sdk/transmission/trans_channel/udp/file/include",
    "//foundation/communication/dsoftbus/dsoftbus_enhance/interfaces/kits/transport",
    "//foundation/communication/dsoftbus/dsoftbus_enhance/sdk/transmission/trans_channel/udp/file/include",
    "//foundation/communication/dsoftbus/sdk/transmission/trans_channel/udp/common/include",
    "//foundation/communication/dsoftbus/sdk/transmission/session/include",
    "//foundation/communication/dsoftbus/core/common/include",
    "//foundation/communication/dsoftbus/adapter/common/include",
  ]

  configs = [
    ":cast_session_channel_config",
    "${cast_engine_root}:cast_engine_default_config",
  ]

  public_configs = [ ":cast_session_channel_config" ]

  deps = [
    "${cast_engine_common}:cast_engine_common_sources",
    "${cast_engine_service}/src/device_manager:cast_discovery",
  ]

  external_deps = [
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "device_manager:devicemanagersdk",
  ]

  subsystem_name = "castplus"
  part_name = "cast_engine"
}
