# Copyright (c) 2024-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/CastEngine/castengine_cast_framework/cast_engine.gni")

config("cast_session_rtsp_config") {
  include_dirs = [ "include" ]
}

ohos_static_library("cast_session_rtsp") {
  sources = [
    "src/rtsp_channel_manager.cpp",
    "src/rtsp_controller.cpp",
    "src/rtsp_package.cpp",
    "src/rtsp_param_info.cpp",
    "src/rtsp_parse.cpp",
  ]

  include_dirs = [ "src" ]

  configs = [
    ":cast_session_rtsp_config",
    "${cast_engine_root}:cast_engine_default_config",
  ]

  public_configs = [ ":cast_session_rtsp_config" ]

  deps = [
    "${cast_engine_common}:cast_engine_common_sources",
    "${cast_engine_service}/src/device_manager:cast_discovery",
    "${cast_engine_service}/src/session/src/channel:cast_session_channel",
    "${cast_engine_service}/src/session/src/utils:cast_session_utils",
    "//third_party/openssl:libcrypto_shared",
  ]

  external_deps = [
    "hilog:libhilog",
    "ipc:ipc_core",
    "device_manager:devicemanagersdk",
  ]

  subsystem_name = "castplus"
  part_name = "cast_engine"
}
