# Copyright (c) Huawei Technologies Co., Ltd. 2022-2023. All rights reserved.

import("//foundation/CastEngine/castengine_cast_framework/cast_engine.gni")

config("cast_session_utils_config") {
  include_dirs = [
    "include",
    "//third_party/glib/glib",
    "//third_party/glib",
  ]
}

ohos_static_library("cast_session_utils") {
  sources = [
    "src/encrypt_decrypt.cpp",
    "src/handler.cpp",
    "src/message.cpp",
    "src/permission.cpp",
    "src/state_machine.cpp",
    "src/cast_timer.cpp",
    "src/utils.cpp",
  ]

  configs = [
    ":cast_session_utils_config",
    "${cast_engine_root}:cast_engine_default_config",
  ]

  public_configs = [ ":cast_session_utils_config" ]

  deps = [
    "${cast_engine_common}:cast_engine_common_sources",
    "//third_party/openssl:libcrypto_shared",
    "//third_party/glib:glib_packages",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "wifi:wifi_sdk",
  ]

  subsystem_name = "castplus"
  part_name = "cast_engine"
}
