# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")

import("//foundation/CastEngine/castengine_cast_framework/cast_engine.gni")

##############################fuzztest##########################################
ohos_fuzztest("CastSessionManagerServiceStubFuzzTest") {
  module_out_path = "cast_engine/cast_engine"
  fuzz_config_file = "$cast_engine_root/test/fuzztest/castsessionmanagerservicestub_fuzzer"

  include_dirs = [
    "$cast_engine_common/include/private",
    "$cast_engine_interfaces/inner_api/include",
    "$cast_engine_root/test/fuzztest/common_fuzzer",
    "$cast_engine_service/include",
    "$cast_engine_service/src/device_manager/include",
    "//third_party/json/single_include/nlohmann",
    "//third_party/jsoncpp/include"
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "cast_session_manager_service_stub_fuzzer.cpp",
    "$cast_engine_service/src/cast_session_manager_service.cpp",
    "$cast_engine_service/src/cast_session_manager_service_stub.cpp",
    "$cast_engine_service/src/cast_service_listener_impl_proxy.cpp",
    "$cast_engine_root/test/fuzztest/common_fuzzer/add_cast_engine_token_fuzzer.cpp",
  ]
  deps = [
    "${cast_engine_client}:cast_client_inner",
    "${cast_engine_common}:cast_engine_common_sources",
    "$cast_engine_service/src/device_manager:cast_discovery",
    "${cast_session_stream_path}:cast_session",
    "//third_party/openssl:libcrypto_shared",
  ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "graphic_2d:surface",
    "hilog:libhilog",
    "input:libmmi-client",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]
}
###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    ":CastSessionManagerServiceStubFuzzTest",
  ]
}
###############################################################################
