# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")

import("//foundation/CastEngine/castengine_cast_framework/cast_engine.gni")

##############################fuzztest##########################################
ohos_fuzztest("StreamPlayerImplStubFuzzTest") {
  module_out_path = "cast_engine/cast_engine"
  fuzz_config_file = "$cast_engine_root/test/fuzztest/streamplayerimplstub_fuzzer"

  include_dirs = [
    "include",
    "$cast_engine_client/include",
    "$cast_engine_common/include/private",
    "$cast_engine_interfaces/inner_api/include",
    "$cast_engine_root/test/fuzztest/common_fuzzer",
    "$cast_session_stream_path/src/channel/include",
    "$cast_session_stream_path/src/stream/include",
    "$cast_session_stream_path/src/stream/src/local/include",
    "$cast_session_stream_path/src/stream/src/player/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "stream_player_impl_stub_fuzzer.cpp",
    "$cast_engine_root/test/fuzztest/common_fuzzer/add_cast_engine_token_fuzzer.cpp",
  ]

  deps = [
    "$cast_session_stream_path/src/stream:cast_session_stream",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "graphic_2d:surface"
  ]
}
###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    ":StreamPlayerImplStubFuzzTest",
  ]
}
###############################################################################
